added encoder info

--- a/motor controller 2/DebugDocumentation.ipynb
+++ b/motor controller 2/DebugDocumentation.ipynb
@@ -10,6 +10,10 @@
     "\n",
     "**Motor:** T-Motor U10 KV100 [Manufacturer Docuentation](https://store.tmotor.com/goods-361-U10+KV100.html?srsltid=AfmBOoqiv_vR-dWMgI1-_WbT1bbBy83fzjXSxKheIYDMxgU6xqobS5Dw)\n",
     "\n",
+    "**Encoders:** Same Sky (formerly CUI Devices) AMT312S-V [Datasheet](https://www.cuidevices.com/product/resource/digikeypdf/amt31.pdf)\n",
+    "* We use two, offset from each other by 60°\n",
+    "* Cable: AMT-17C-1-036 [datasheet](https://www.cuidevices.com/product/resource/digikeypdf/amt-17c-1-036.pdf)\n",
+    "\n",
     "**Controller Source Architecture**: Duke EasyController 3 [Project GitHub](https://github.com/pgrady3/EasyController3)"
    ]
   },
